# PAOFLOW-QTpy

./: .gitignore  .pre-commit-config.yaml  Notes.md  README.md  README_conductor.input  README_current.input  fortran_to_python.md  pyproject.toml
.github/workflows/: ci.yml
Reference/Fortran/: README.md
Reference/Fortran/example02/: atomic_proj.xml.ham  conductor_bulk.out  projectability.txt
examples/: analysis.ipynb
examples/example01/: conductor.out  conductor.yaml  job.sh  main.py
examples/example02/: conductor_bulk.out  conductor_bulk.yaml  conductor_lcr.out  conductor_lcr.yaml  conductor_lead_Al.out  conductor_lead_Al.yaml  current.out  current.yaml  job.sh  main_conductor.py  main_current.py  proj.in
examples/example04/: conductor.out  conductor.yaml  job.sh
examples/example1/: analysis.ipynb  conductor.in  conductor.out  conductor.yaml  eigein.in  job.sh  main.py
examples/example1/al5.save/: atomic_proj.xml  atomic_proj.xml.ham  data-file.xml
examples/example2/: conductor.out  conductor_bulk.out  conductor_lcr.out  conductor_lcr.yaml  conductor_lead_Al.out  conductor_lead_Al.yaml  current.out  current.yaml  job.sh  main.py  main_conductor.py  main_current.py  nscf.in  scf.in
examples/example2/alh.save/: Al.pbe-rrkj.UPF
examples/pseudo/: Al.pbe-n-van.UPF
src/: fortran_to_python.md
src/PAOFLOW_QTpy/: compute_rham.py  conductor.py  do_conductor.py  dos.py  fourier_par.py  get_rgrid.py  green.py  gzero_maker.py  hamiltonian.py  hamiltonian_init.py  hamiltonian_setup.py  input.py  input_from_file.py  input_parameters.py  input_parameters_pydantic.py  kpoints.py  leads_self_energy.py  locate.py  main.py  operator_blc.py  prepare_data.py  read_matrix.py  smearing_T.py  smearing_base.py  startup.py  transfer.py  transmittance.py  unitconverters.py
src/PAOFLOW_QTpy/grid/: egrid.py  get_rgrid.py  kpoints.py
src/PAOFLOW_QTpy/hamiltonian/: compute_rham.py  hamiltonian.py  hamiltonian_init.py  operator_blc.py
src/PAOFLOW_QTpy/io/: get_input_params.py  input.py  input_from_file.py  input_from_yaml.py  input_parameters.py  iotk_reader.py  log_module.py  operator.py  startup.py  summary.py  write_data.py  (+1 more)
tests/: compare_fortranvspython_output.ipynb  test.ipynb  test.yaml  test_integration_dat.py  test_smearing_T.py  test_startup.py  test_transfer.py  test_write_header.py  testoutputfiles.ipynb
tests/fortran_tests/: test_smearing_T.f90  test_smearing_base.f90
(+27 files in other folders)
